Fix - Minor media stylelint warn

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -134,7 +134,7 @@ strong {
 }
 
 body {
-  background-color: white;
+  background-color: #fff;
   color: #333;
   font-family: Roboto, sans-serif;
   font-size: .875rem;
@@ -164,8 +164,8 @@ a:visited {
   background: linear-gradient(#ff79da, #9356dc);
   border: 0;
   border-radius: 25px;
-  -webkit-box-shadow: 2px 2px 10px 2px #e0e0e0;
-          box-shadow: 2px 2px 10px 2px #e0e0e0;
+  -webkit-box-shadow: 0 5px 15px 0 #c3c3c3;
+          box-shadow: 0 5px 15px 0 #c3c3c3;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   color: #fff;
@@ -176,8 +176,8 @@ a:visited {
   padding: 15px 30px;
   text-align: center;
   text-decoration: none;
-  -webkit-transition: all .2s;
-  transition: all .2s;
+  -webkit-transition: .2s;
+  transition: .2s;
 }
 
 .button1:hover {
@@ -187,7 +187,7 @@ a:visited {
           box-shadow: 0 5px 15px 0 #9d9d9d;
 }
 
-a.button1 {
+.button1a {
   color: #fff;
 }
 
@@ -986,6 +986,7 @@ footer .footer-icon i {
           animation: check-box ease .5s;
   -webkit-animation-iteration-count: 1;
           animation-iteration-count: 1;
+  background-color: #99e2d0;
   left: 27%;
   position: absolute;
   top: 30%;
