--- a/assets/css/media.css
+++ b/assets/css/media.css
@@ -27,10 +27,10 @@
 }
 
 @media screen and (max-width: 768px) {
-  header .header-left {
+  .header-left {
     width: 100%;
   }
-  header .header-left .search-location {
+  .header-left .search-location {
     margin: auto;
     width: 200px;
   }
@@ -119,7 +119,7 @@
     margin-top: -50px;
     z-index: 999;
   }
-  .menu main h1.shrikhand {
+  .menu main .shrikhand {
     font-size: 1.75rem;
     padding: 30px 10px 20px 15px;
   }
@@ -129,20 +129,8 @@
         -ms-flex-flow: column nowrap;
             flex-flow: column nowrap;
   }
-  .menu main .cards h2.sub-title {
+  .menu main .cards .sub-title {
     font-size: 1.25rem;
-  }
-  .menu main .cards .card {
-    border-radius: 15px;
-    cursor: pointer;
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: row;
-            flex-direction: row;
-    margin: 10px 0;
-  }
-  .menu main .cards .card:hover .caption-check-box i {
-    left: 27%;
   }
   aside {
     margin-top: 25px;
@@ -176,6 +164,20 @@
   footer .logo img {
     max-width: 150px;
   }
+}
+
+.card-menu {
+  border-radius: 15px;
+  cursor: pointer;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  margin: 10px 0;
+}
+
+.card-menu:hover .fa-check-circle {
+  left: 27%;
 }
 
 @media screen and (max-width: 375px) {
