--- a/assets/scss/_animations.scss
+++ b/assets/scss/_animations.scss
@@ -34,6 +34,7 @@
     .fa-check-circle {
       animation: check-box ease .5s;
       animation-iteration-count: 1;
+      background-color: $tertiary;
       left: 27%;
       position: absolute;
       top: 30%;
