--- a/assets/scss/_reset.scss
+++ b/assets/scss/_reset.scss
@@ -134,8 +134,8 @@ strong {
 
 //Base
 body {
-  background-color: white;
-  color: #333;
+  background-color: $white-color;
+  color: $text-grey;
   font-family: Roboto, sans-serif;
   font-size: .875rem;
   line-height: 1.5;
@@ -144,7 +144,7 @@ body {
 }
 
 a {
-  color: #333;
+  color: $text-grey;
 
   &:visited {
     color: inherit;
